# Rule-Geometry-Engine

./: CMakeLists.txt  LICENSE  README.md
cmake/: rge_options.cmake
examples/: CMakeLists.txt  basic_pipeline.cpp
include/rge/: coordinate_system.hpp  error.hpp  rge.hpp  scratch_buffer.hpp
include/rge/geom/: bbox.hpp  line.hpp  point.hpp  polygon_view.hpp
include/rge/rules/: evaluators.inl  events.hpp  rule_context.hpp
include/rge/spatial/: contains.hpp  distance.hpp  intersects.hpp  iou.hpp  polygon_ops.hpp  side_of_line.hpp
include/rge/trajectory/: fixed_ring_buffer.hpp  track_cross_line.hpp  track_cross_line.inl  track_kinematics.hpp  track_kinematics.inl  track_pool.hpp  track_pool.inl  track_relation.hpp  track_relation.inl  track_state.hpp  track_update.hpp  track_update.inl
src/geom/: polygon_view.cpp
src/spatial/: contains.cpp  distance.cpp  intersects.cpp  iou.cpp  polygon_ops.cpp  side_of_line.cpp
tests/: CMakeLists.txt  cross_line_test.cpp  roi_enter_leave_test.cpp  side_of_line_test.cpp  spatial_iou_test.cpp  trajectory_relation_test.cpp  trajectory_update_test.cpp
